fix: fix alignments

--- a/tyyli.css
+++ b/tyyli.css
@@ -397,7 +397,7 @@ a { color: var(--accent); }
   display: flex;
   gap: 10px;
   justify-content: center;
-  margin: -15px;
+  margin: 0px; 
 }
 #videoControls button {
   padding: 6px 12px;
